[tool.poetry]
name = "ehome"
version = "0.1.0"
description = "Home device control portal"
authors = ["Mykola <nchernov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.3"
Flask-Migrate = "^4.0.4"
flask-login = "^0.6.2"
python-dotenv = "^1.0.0"
flask-mail = "^0.9.1"
flask-wtf = "^1.1.1"
email-validator = "^1.3.1"
pydantic = "^1.10.7"
psycopg2-binary = "^2.9.5"
pyhon = "^0.4.1"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
